# Skeleton-App

./: CHANGELOG.md  Dockerfile  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: bump-my-version.yml  codeql.yml  generate-deploy-mkdocs-ghpages.yaml
app/: __version__.py
docs/: project_dsl.txt
github/workflows/: generate-deploy-mkdocs-ghpages.yml  links-fail-fast.yml
