[project]
name = "<project name>"
version = "0.0.0"
description = "<project desc>"
dependencies = [
    "pydantic==2.10.4",
    "loguru==0.5.3"
]

[tool.uv]
dev-dependencies = [
    "pytest==6.2.5",
    "pytest-asyncio==0.15.1",
    "pytest-mock==3.6.1"
]

# [tool.uv.optional-dependencies]
# streamlit = [
#    "streamlit==1.2.0"
# ]

[tool.uv.optional-dependencies.docs]
mkdocs = [
    "mkdocs==1.4.2",
    "mkdocs-material==9.1.15"
]
